--- a/index.html
+++ b/index.html
@@ -2,26 +2,33 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>piano</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="./css/style.css">
+
+    <title>Piano | Manual do Dev</title>
 </head>
 <body>
+    
     <section class="piano">
+
         <section class="controls">
-            <h1>piano</h1>
+
+            <h1>Manual do Dev | Piano</h1>
 
             <label class="checkbox__label">
-                show keys
+                Show keys
                 <span class="switcher">
                     <span class="switcher__button"></span>
                 </span>
-                <input type="checkbox" class="checkbox_keys" hidden>
+                <input type="checkbox" class="checkbox__keys" hidden>
             </label>
 
         </section>
 
         <section class="piano__keys disabled-keys">
+
             <div class="key white" data-note="1"><span>TAB</span></div>
             <div class="key black" data-note="2"><span>1</span></div>
             <div class="key white" data-note="3"><span>q</span></div>
@@ -46,9 +53,11 @@
             <div class="key white" data-note="22"><span>]</span></div>
             <div class="key black" data-note="23"><span>&larr;</span></div>
             <div class="key white" data-note="24"><span>\</span></div>
+
         </section>
 
     </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
